--- a/cennik.html
+++ b/cennik.html
@@ -31,9 +31,12 @@
             </ul>
         </nav>
 
-        <header class="cennik">cennik</header>
-        <header class="uslugi">usługi</header>
+        
+        <!-- <header class="uslugi">usługi</header> -->
         <ul class="cennik">
+            <li>
+                <header class="cennik">cennik</header>
+            </li>
             <li>
                 <div class="price-title">strzyżenie damskie</div>
                 <div class="price-price">120 - 160 pln</div>
@@ -91,20 +94,20 @@
                 <div class="price-price">30 - 70 PLN</div>
             </li>
         </ul>
-        <header class="produkty">produkty</header>
+        <!-- <header class="produkty">produkty</header> -->
 
-        <section class="produkty">
+        <!-- <section class="produkty">
             <div class="produkt szampon">
-                <img src="" alt="">
+                <img src="szampon.png" alt="">
                 <div class="info">
-                    <span class="produkt">SZMAPON</span>
+                    <span class="produkt">SZAMPON</span>
                     <span class="cena">15zł</span>
                 </div>
 
 
             </div>
             <div class="produkt recznik">
-                <img src="" alt="">
+                <img src="reczniki.png" alt="">
                 <div class="info">
                     <span class="produkt">RĘCZNIK</span>
                     <span class="cena">50zł</span>
@@ -112,7 +115,7 @@
 
             </div>
 
-        </section>
+        </section> -->
 
     </section>
 
