--- a/kontakt.html
+++ b/kontakt.html
@@ -31,6 +31,9 @@
                 <li><a href="kontakt.html" class="wybrany">Kontakt</a></li>
                 <li><a href="logowanie.html" class="">Logowanie</a></li>
             </ul>
+            <a href="#" class="hamburger">
+                <i class="fas fa-bars"></i>
+            </a>
         </nav>
         <!-- <header class="kontakt1">Godziny otwarcia</header> -->
         <span class="kontakt">
@@ -126,7 +129,7 @@
     </footer>
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
