--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>O salonie</title>
     <link rel="shortcut icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7a07e80b53.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,6 +30,9 @@
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="logowanie.html" class="">Logowanie</a></li>
             </ul>
+            <a href="#" class="hamburger">
+                <i class="fas fa-bars"></i>
+            </a>
         </nav>
         <section class="aboutContent">
             <section class="aboutText">
@@ -129,7 +133,7 @@
         © 2018 U Pawełka
     </footer>
 
-
+    <script src="script.js"></script>
 
 </body>
 
