--- a/logowanie.html
+++ b/logowanie.html
@@ -8,6 +8,7 @@
     <title>O salonie</title>
     <link rel="shortcut icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7a07e80b53.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,6 +30,9 @@
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="logowanie.html" class="logowanie">Logowanie</a></li>
             </ul>
+            <a href="#" class="hamburger">
+                <i class="fas fa-bars"></i>
+            </a>
         </nav>
 
         <section class="logowanie">
@@ -53,7 +57,7 @@
     </footer>
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
