--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <title>Strona główna</title>
     <link rel="shortcut icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7a07e80b53.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,10 +28,13 @@
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="logowanie.html" class="">Logowanie</a></li>
             </ul>
+            <a href="#" class="hamburger">
+                <i class="fas fa-bars"></i>
+            </a>
         </nav>
 
         <section class="contentMain">
-            <img src="logo-main.svg" alt="">
+            <img src="logo-duze.svg" alt="">
             <button><a href="kontakt.html">Zapisz się już teraz</a></button>
         </section>
 
@@ -41,10 +45,13 @@
 
     <footer>
         © 2018 U Pawełka
+        <a href="" class="hamburger">
+            <i class="fas fa-bars"></i>
+        </a>
     </footer>
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
