--- a/pracownicy.html
+++ b/pracownicy.html
@@ -8,6 +8,7 @@
     <title>Pracownicy</title>
     <link rel="shortcut icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7a07e80b53.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,6 +30,9 @@
                 <li><a href="kontakt.html">Kontakt</a></li>
                 <li><a href="logowanie.html" class="">Logowanie</a></li>
             </ul>
+            <a href="#" class="hamburger">
+                <i class="fas fa-bars"></i>
+            </a>
         </nav>
 
         <header class="pracownicy">pracownicy</header>
@@ -70,7 +74,7 @@
 
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
